--- a/src/lang/zh-CN.json
+++ b/src/lang/zh-CN.json
@@ -218,7 +218,7 @@
     "ADD_QUESTION_PICTURE":"添加图片",
     "BILL_QUESTION_TIPS":"问题描述（必填）",
     "CONTACT_PEOPLE":"联系人（必填）",
-    "CONTACT_PHONE_NO":"联系电话（必填）",
+    "CONTACT_PHONE_NO":"手机号（必填）",
 
     "BILL_PEOPLE":"联系人",
     "BILL_PHONE_NO":"电话",
