--- a/src/lang/zh-CN.json
+++ b/src/lang/zh-CN.json
@@ -171,7 +171,7 @@
     "OFFICIAL_EMAIL": "电子邮件：",
     "MY_DISK": "我的磁盘",
     "DISK_ORDER": "序号",
-    "DISK_MODE":"模式",
+    "DISK_MODE":"盘符",
     "DISK_NUMBER": "硬盘数",
     "DISK_SERIAL_NUMBER": "序列号",
 
