--- a/src/lang/zh-CN.json
+++ b/src/lang/zh-CN.json
@@ -362,8 +362,8 @@
     "NAME_OF_FIRM": "深圳市先河系统技术有限公司",
     "WEB_OF_FIRM": "www.arsyun.com",
     "INFO_OF_FIRM": "专注于IPFS/Filecoin分布式云存储的技术型公司。",
-    "NUMBER_OF_FIRM": "0755-88886666",
-    "EMAIL_OF_FIRM": "arsyun@arsyun.com",
+    "NUMBER_OF_FIRM": "0755-83554587",
+    "EMAIL_OF_FIRM": "service@arsyun.com",
     "ADVANCE_RIVER_TEST": "先河产测",
     "PLEASE_INPUT_ROLE_NAME": "请输入角色名称",
     "PLEASE_SELECT_GROUP": "请选择您要移动至的分组",
