--- a/src/lang/en-US.json
+++ b/src/lang/en-US.json
@@ -1,5 +1,5 @@
 {
-    "SYSTEM_NAME": "矿池运维管理系统",
+    "SYSTEM_NAME": "先河云服务集群运维系统",
     "PLEASE_INPUT_ACCOUNT": "请输入账号",
     "PLEASE_INPUT_PASSWORD": "请输入密码",
     "FORGET_PASSWORD": "忘记密码",
