--- a/src/lang/zh-CN.json
+++ b/src/lang/zh-CN.json
@@ -1,8 +1,8 @@
 {
     "EMPTY": "",
     "SYSTEM_NAME": "先河云服务集群运维系统",
-    "PLEASE_INPUT_ACCOUNT": "请输入账号",
-    "PLEASE_INPUT_PASSWORD": "请输入密码",
+    "PLEASE_INPUT_ACCOUNT": "输入手机号",
+    "PLEASE_INPUT_PASSWORD": "输入密码",
     "FORGET_PASSWORD": "忘记密码",
     "LOGIN_BUTTON": "登录",
     "ERROR_PASSWORD": "密码错误，请重新输入",
