--- a/src/lang/zh-CN.json
+++ b/src/lang/zh-CN.json
@@ -7,22 +7,22 @@
     "LOGIN_BUTTON": "登录",
     "ERROR_PASSWORD": "密码错误，请重新输入",
     "INDEX_PAGE": "首页",
-    "POOL_PAGE": "矿池",
+    "POOL_PAGE": "集群",
     "DEVICE_TEST_PAGE": "产测",
     "BILL_PAGE": "工单",
     "MANAGE_PAGE": "管理",
     "INCOME": "收益",
     "POWER": "算力",
     "INCOME_DETAIL": "收益明细",
-    "INCOME_TOTAL": "矿池总收益",
-    "INCOME_BALANCE": "矿池余额",
+    "INCOME_TOTAL": "集群总收益",
+    "INCOME_BALANCE": "集群余额",
     "MY_TOTAL_INCOME": "我的总收益",
     "MY_BALANCE": "我的余额",
     "TOTAL_MEMORY": "总存储",
     "CURRENT_POWER": "当前算力",
     "ALREADY_MEMORY": "已存储",
     "ONLINE_MINER": "在线数",
-    "TOTAL_MINER": "总矿机数",
+    "TOTAL_MINER": "总机器数",
     "OUTLINE_MINER": "离线数",
     "WARNING": "告警",
     "WARNING_SET": "告警设置",
@@ -40,15 +40,15 @@
 
     "BILL_NAME": "工单名称",
     "DEAL_STATUS": "处理状态",
-    "ALL_MINER": "全部矿机",
+    "ALL_MINER": "全部机器",
     "TOTAL_DISK_SIZE": "总磁盘",
     "DAY_OFF_RATE": "24小时离线率",
     "POOL_GRADE": "评级",
     "MY_POOL_GROUP": "我的分组",
     "CREATE_GROUP": "新建分组",
     "MANAGE_GROUP": "管理分组",
-    "MINER_LIST": "矿机列表",
-    "MINER_NAME": "矿机名称",
+    "MINER_LIST": "机器列表",
+    "MINER_NAME": "机器名称",
     "MINER_ADDRESS": "所在地",
     "MINER_IP_ADD": "IP地址",
     "USE_MEMORY_PERCENT": "存储占比",
@@ -62,16 +62,16 @@
     "BATCH_MOVE": "批量移动",
     "BATCH_DELETE": "批量删除",
     "POINT_ROLE": "指定角色",
-    "SEARCH_MINER": "搜索矿机",
-    "PLEASE_INPUT_MINER_NAME": "请输入矿机名称",
+    "SEARCH_MINER": "搜索机器",
+    "PLEASE_INPUT_MINER_NAME": "请输入机器名称",
     "CLEAR_CONDITION": "清除",
     "TOTAL": "总数",
     "ONLINE": "在线",
     "OFFLINE": "离线",
-    "MINER": "矿工",
-    "POOL_WALLET": "矿池钱包",
+    "MINER": "机器",
+    "POOL_WALLET": "集群钱包",
     "TOTAL_INCOME": "总收益",
-    "POOL_BALANCE": "矿池余额",
+    "POOL_BALANCE": "集群余额",
     "MY_WALLET": "我的钱包",
     "TOTAL_INCOME2": " 总收益",
     "BALANCE": "余额",
@@ -90,8 +90,8 @@
     "CANCEL": "取消",
     "COMPUTE": "计算",
     "STORAGE": "存储",
-    "BELONG_POOL": "所属矿池",
-    "POOL_DEFAULT_GROUP": "矿池默认分组",
+    "BELONG_POOL": "所属集群",
+    "POOL_DEFAULT_GROUP": "集群默认分组",
     "QUIT_MANAGE": "退出管理",
     "TYPE": "类型",
     "CONTENT": "内容",
@@ -145,7 +145,7 @@
     "SYSTEM_PERFORMANCE":"系统性能",
     "DISK_MANAGE":"磁盘管理",
     "NET_CONFIG":"网络配置",
-    "MINER_TEST": "矿机检测",
+    "MINER_TEST": "机器检测",
     "MANAGE_LICENSE": "License管理",
     "ALL_IS_READ": "全部标记已读",
     "SUCCESS": "成功",
@@ -157,7 +157,7 @@
     "UNSET": "未设置",
     "NETWORK": "网络",
     "LICENSE_NUMBER": "License号",
-    "ASSOCIATION_MINER": "关联矿机",
+    "ASSOCIATION_MINER": "关联机器",
     "TEST_TYPE": "产测类型",
     "MINER_IP": "IP地址",
     "LICENSE_DETAIL": "License详情",
@@ -255,7 +255,7 @@
     "VALID_POWER": "有效算力",
 
 
-    "MINER_TOTAL": "矿机总数：{count}台",
+    "MINER_TOTAL": "机器总数：{count}台",
     "SEAL_COUNT": "算力机：{count}台",
     "PROVE_COUNT": "证明机：{count}台",
     "STORAGE_COUNT": "存储机：{count}台",
@@ -265,7 +265,7 @@
 
 
 
-    "INCOME_POOL": "进入矿池",
+    "INCOME_POOL": "点击进入",
     "ADDRESS": "地址",
 
 
@@ -277,14 +277,14 @@
 
     "POWER_INCOME_INFO":"收益信息",
     "POWER_GROUP_MANAGE":"分组管理",
-    "POWER_MINER_MANAGE":"矿机管理",
+    "POWER_MINER_MANAGE":"机器管理",
     "POWER_STAFF_MANAGE":"员工管理",
     "POWER_ROLE_MANAGE":"角色管理",
     "POWER_POWER_MANAGE":"权限管理",
     "POWER_WARNING_SET":"告警设置",
     "POWER_BILL_MANAGE":"工单管理",
     "OPERATE_POWER":"功能权限",
-    "POOL_OPERATE_POWER":"矿池权限",
+    "POOL_OPERATE_POWER":"集群权限",
     "ALREADY_IN_USED": "已启用",
     "NOT_IN_USED": "未启用",
     "STAFF_NAME":"姓名",
@@ -307,11 +307,11 @@
     "ROLE_OPERATE_PANEL": "操作",
     "MODIFY_SUCCESS": "修改成功",
     "CONFIG_SUGGEST": "配置建议",
-    "TEST_MINER": "矿机检测",
+    "TEST_MINER": "机器检测",
     "MINER_TEST_RESULT": "检测结果",
     "SYSTEM_VERSION": "固件版本",
     "COMPUTER_IP_ADDRESS": "主机IP地址",
-    "SCAN_MINER": "扫描矿机",
+    "SCAN_MINER": "扫描机器",
     "CLEAR_OPERATE_RECORD": "清除操作记录",
     "BEGIN_TO_CHECK": "开始检测",
     "CHECK_DETAIL": "查看",
@@ -327,7 +327,7 @@
     "USED_SPACE": "已用空间(GB)",
     "TOTAL_SPACE": "总空间(GB)",
 
-    "MOVE_MACHINE_CANNOT_EMPTY": "没有选中需要操作的矿机",
+    "MOVE_MACHINE_CANNOT_EMPTY": "没有选中需要操作的机器",
 
     "INFO_OF_THE_BILL_CANNOT_BE_EMPTY": "工单内容不能为空",
     "BILL_ADD_SUCCESS": "工单添加成功",
@@ -373,10 +373,10 @@
     "PICTURE_SIZE_CANNOT_MORE_THAN":"图片大小不能大于2MB",
     "PICTURE_TYPE_ONLY_JPG_PNG":"图片格式仅支持JPG或PNG",
 
-    "YOU_SURE_RESTART_MINER": "你确定要重启矿机吗？",
-    "YOU_SURE_SHUTDOWN_MINER": "你确定要关闭矿机吗？",
-    "YOU_SURE_DELETE_MINER": "确定将这些矿机从矿池中删除吗？",
-    "YOU_SURE_DELETE_GROUP": "被删除分组的矿机将会返回<br/>未分组，确定删除分组吗？",
+    "YOU_SURE_RESTART_MINER": "你确定要重启机器吗？",
+    "YOU_SURE_SHUTDOWN_MINER": "你确定要关闭机器吗？",
+    "YOU_SURE_DELETE_MINER": "确定将这些机器从集群中删除吗？",
+    "YOU_SURE_DELETE_GROUP": "被删除分组的机器将会返回<br/>未分组，确定删除分组吗？",
     "YOU_SURE_DELETE_STAFF": "你确定要删除该员工吗？",
     "YOU_SURE_DELETE_ROLE": "你确定要删除该角色吗？",
     "YOU_SURE_CLOSE_BILL": "你确定要关闭工单吗？",
